# TASK3

./: CMakeLists.txt  CRat.cpp  CRat.h  CRat0.cpp  CRat0.h  CRat1.cpp  CRat1.h  CRatFactory.h  CRatFactory0.cpp  CRatFactory0.h  CRatFactory1.cpp  CRatFactory1.h  functions.cpp  functions.h  inputfile.txt  main.cpp
