cmake_minimum_required(VERSION 3.5)

project(111 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_executable(111 CRatFactory1.h CRatFactory1.cpp CRatFactory0.cpp CRatFactory0.h CRat1.cpp CRat1.h CRat0.cpp CRat0.h main.cpp functions.cpp CRat.cpp CRat.h CRatFactory.h functions.h)
